--- a/azure-devops-extension-project-navigator.json
+++ b/azure-devops-extension-project-navigator.json
@@ -1,10 +1,10 @@
 {
     "manifestVersion": 1,
-    "id": "global-work-item-creator",
+    "id": "project-navigator-dashboard",
     "publisher": "dankore-software",
-    "version": "2.0.19",
-    "name": "Global Work Item Creator",
-    "description": "Create stories and tasks in any project from your dashboard. Pick project, work item type, area path, and create work items across all your Azure DevOps projects.",
+    "version": "1.0.3",
+    "name": "Project Navigator",
+    "description": "Quickly navigate to any of your Azure DevOps projects from your dashboard.",
     "categories": [
         "Azure Boards"
     ],
@@ -15,7 +15,7 @@
         }
     ],
     "icons": {
-        "default": "static/logo.png"
+        "default": "static/project-navigator-logo.png"
     },
     "content": {
         "details": {
